I added my sweet profile pic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>This is my first repo!</h1>
+    <h2>This is my profile picture!</h2>
+    <img src="ME.jpg" alt="">
 
 </body>
 
